<resources>
    <string name="app_name">Sarva Matrimony</string>
    <string name="go_back">Are you sure want to go back?</string>
    <string name="Login">LOGIN</string>
    <string name="Sign_Up">REGISTER FREE</string>
    <string name="data_not_avelable">Data not available</string>
    <string name="Registration">REGISTRATION</string>
    <string name="Indias_most_trusted_matrimony_app">India\'s most trusted \nPremium Matrimony app</string>
    <string name="login_now">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="Please_enter_username_and_password">Please enter email id and password.</string>
    <string name="Please_enter_username">Please enter email id.</string>
    <string name="Please_enter_password">Please enter password.</string>
    <string name="Please_Wait">Please Wait...</string>
    <string name="Please_enter_valid_email_address">Please enter valid email address</string>
    <string name="Enter_Email_Id_Or_Username">Enter Email Id Or Username</string>
    <string name="Submit">SUBMIT</string>
    <string name="Profile_Created_By">PROFILE CREATED FOR</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Religion">Religion</string>
    <string name="Caste">Caste</string>
    <string name="Mother_Tongue">Mother Tongue</string>
    <string name="Country">Country</string>
    <string name="Country_Code">Country Code</string>
    <string name="Verify_continue">VERIFY &amp; CONTINUE</string>
    <string name="edit">EDIT</string>
    <string name="edit_mobile_no">Edit Mobile No</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="Please_enter_your_register_your_mobile_no">Please enter your register your mobile no.</string>
    <string name="CONTINUE">CONTINUE</string>
    <string-array name="arr_marital_status">
        <item>Never Married</item>
        <item>Widower</item>
        <item>Divorced</item>
        <item>Awaiting Divorce</item>
    </string-array>
    <string-array name="arr_marital_status1">
        <item>Never Married</item>
        <item>Widower</item>
        <item>Divorced</item>
        <item>Awaiting Divorce</item>
        <item>Doesn\'t Matter</item>
    </string-array>
    <string-array name="arr_no_of_children">
        <item>No Children</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4+</item>

    </string-array>
    <string-array name="arr_height">
        <item>48</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>89</item>
    </string-array>
    <string-array name="arr_weight">
        <item>40 Kg</item>
        <item>41 Kg</item>
        <item>42 Kg</item>
        <item>43 Kg</item>
        <item>44 Kg</item>
        <item>45 Kg</item>
        <item>46 Kg</item>
        <item>47 Kg</item>
        <item>48 Kg</item>
        <item>49 Kg</item>
        <item>50 Kg</item>
        <item>51 Kg</item>
        <item>52 Kg</item>
        <item>53 Kg</item>
        <item>54 Kg</item>
        <item>55 Kg</item>
        <item>56 Kg</item>
        <item>57 Kg</item>
        <item>58 Kg</item>
        <item>59 Kg</item>
        <item>60 Kg</item>
        <item>61 Kg</item>
        <item>62 Kg</item>
        <item>63 Kg</item>
        <item>64 Kg</item>
        <item>65 Kg</item>
        <item>66 Kg</item>
        <item>67 Kg</item>
        <item>68 Kg</item>
        <item>69 Kg</item>
        <item>70 Kg</item>
        <item>71 Kg</item>
        <item>72 Kg</item>
        <item>73 Kg</item>
        <item>74 Kg</item>
        <item>75 Kg</item>
        <item>76 Kg</item>
        <item>77 Kg</item>
        <item>78 Kg</item>
        <item>79 Kg</item>
        <item>80 Kg</item>
        <item>81 Kg</item>
        <item>82 Kg</item>
        <item>83 Kg</item>
        <item>84 Kg</item>
        <item>85 Kg</item>
        <item>86 Kg</item>
        <item>87 Kg</item>
        <item>88 Kg</item>
        <item>89 Kg</item>
        <item>90 Kg</item>
        <item>91 Kg</item>
        <item>92 Kg</item>
        <item>93 Kg</item>
        <item>94 Kg</item>
        <item>95 Kg</item>
        <item>96 Kg</item>
        <item>97 Kg</item>
        <item>98 Kg</item>
        <item>99 Kg</item>
        <item>100 Kg</item>
        <item>101 Kg</item>
        <item>102 Kg</item>
        <item>103 Kg</item>
        <item>104 Kg</item>
        <item>105 Kg</item>
        <item>106 Kg</item>
        <item>107 Kg</item>
        <item>108 Kg</item>
        <item>109 Kg</item>
        <item>110 Kg</item>
        <item>111 Kg</item>
        <item>112 Kg</item>
        <item>113 Kg</item>
        <item>114 Kg</item>
        <item>115 Kg</item>
        <item>116 Kg</item>
        <item>117 Kg</item>
        <item>118 Kg</item>
        <item>119 Kg</item>
        <item>120 Kg</item>
        <item>121 Kg</item>
        <item>122 Kg</item>
        <item>123 Kg</item>
        <item>124 Kg</item>
        <item>125 Kg</item>
        <item>126 Kg</item>
        <item>127 Kg</item>
        <item>128 Kg</item>
        <item>129 Kg</item>
        <item>130 Kg</item>
        <item>131 Kg</item>
        <item>132 Kg</item>
        <item>133 Kg</item>
        <item>134 Kg</item>
        <item>135 Kg</item>
        <item>136 Kg</item>
        <item>137 Kg</item>
        <item>138 Kg</item>
        <item>139 Kg</item>
        <item>140 Kg</item>
    </string-array>
    <string-array name="arr_body_type">
        <item>Slim</item>
        <item>Average</item>
        <item>Athletic</item>
        <item>Heavy</item>
    </string-array>
    <string-array name="arr_physical_status">
        <item>Normal</item>
        <item>Physically Challenged</item>
    </string-array>
    <string-array name="arr_physical_status1">
        <item>Normal</item>
        <item>Physically Challenged</item>
        <item>Doesn\'t Matter</item>
    </string-array>
    <string-array name="arr_Employed_in">
        <item>Government</item>
        <item>Private</item>
        <item>Business</item>
        <item>Defence</item>
        <item>Self Employed</item>
    </string-array>
    <string-array name="arr_Chiled_leaving_status">
        <item>Living with me</item>
        <item> Not living with me</item>
    </string-array>
    <string-array name="arr_annual_income">
        <item>Rs 10,000 - 50,000</item>
        <item>Rs 50,000 - 1,00,000</item>
        <item>Rs 1,00,000 - 2,00,000</item>
        <item>Rs 2,00,000 - 4,00,000</item>
        <item>Rs 4,00,000 - 6,00,000</item>
        <item>Rs 6,00,000 - 8,00,000</item>
        <item>Rs 8,00,000 - 10,00,000</item>
        <item>Rs 10,00,000 - 12,00,000</item>
        <item>Rs 12,00,000 - 14,00,000</item>
        <item>Rs 14,00,000 - 16,00,000</item>
        <item>Rs 16,00,000 - 18,00,000</item>
        <item>Rs 18,00,000 - 20,00,000</item>
        <item>Rs 20,00,000 - 22,00,000</item>
        <item>Rs 22,00,000 - 24,00,000</item>
        <item>Rs 24,00,000 - 26,00,000</item>
        <item>Rs 26,00,000 - 28,00,000</item>
        <item>Rs 28,00,000 - 30,00,000</item>
        <item>Rs 30,00,000 - 32,00,000</item>
        <item>Rs 32,00,000 - 34,00,000</item>
        <item>Rs 34,00,000 - 36,00,000</item>
        <item>Rs 36,00,000 - 38,00,000</item>
        <item>Rs 38,00,000 - 40,00,000</item>
        <item>Rs 40,00,000 - 42,00,000</item>
        <item>Rs 42,00,000 - 44,00,000</item>
        <item>Rs 44,00,000 - 46,00,000</item>
        <item>Rs 46,00,000 - 48,00,000</item>
        <item>Rs 48,00,000 - 50,00,000</item>
        <item>Rs 50,00,000 - 52,00,000</item>
        <item>Rs 52,00,000 - 54,00,000</item>
        <item>Rs 54,00,000 - 56,00,000</item>
        <item>Rs 56,00,000 - 58,00,000</item>
        <item>Rs 58,00,000 - 60,00,000</item>
        <item>Rs 60,00,000 - 62,00,000</item>
        <item>Rs 62,00,000 - 64,00,000</item>
        <item>Rs 64,00,000 - 66,00,000</item>
        <item>Rs 66,00,000 - 68,00,000</item>
        <item>Rs 68,00,000 - 70,00,000</item>
        <item>Rs 70,00,000 - 72,00,000</item>
        <item>Rs 72,00,000 - 74,00,000</item>
        <item>Rs 74,00,000 - 76,00,000</item>
        <item>Rs 76,00,000 - 78,00,000</item>
        <item>Rs 78,00,000 - 80,00,000</item>
        <item>Rs 80,00,000 - 82,00,000</item>
        <item>Rs 82,00,000 - 84,00,000</item>
        <item>Rs 84,00,000 - 86,00,000</item>
        <item>Rs 86,00,000 - 88,00,000</item>
        <item>Rs 88,00,000 - 90,00,000</item>
        <item>Rs 90,00,000 - 92,00,000</item>
        <item>Rs 92,00,000 - 94,00,000</item>
        <item>Rs 94,00,000 - 96,00,000</item>
        <item>Rs 96,00,000 - 98,00,000</item>
        <item>Rs 98,00,000 - 1,00,00,000</item>
        <item>Above Rs 1,00,00,000</item>
        <item>Not Working</item>
        <item>Doesn \'t Matter</item>
    </string-array>
    <string-array name="arr_diet_2">

        <item>Vegetarian</item>
        <item>Non-Vegetarian</item>
        <item>Eggetarian</item>

    </string-array>
    <string-array name="arr_diet">
        <item>Any</item>
        <item>Vegetarian</item>
        <item>Non-Vegetarian</item>
        <item>Eggetarian</item>

    </string-array>
    <string-array name="arr_smoking_2">
        <item>Yes</item>
        <item>No</item>
        <item>Occasionally</item>

    </string-array>
    <string-array name="arr_smoking_3">
        <item>Yes</item>
        <item>No</item>
        <item>Occasionally</item>
        <item>Doesn\'t Matter</item>
    </string-array>
    <string-array name="photo_available">
        <item>Yes</item>
        <item>No</item>
        <item>Doesn\'t Matter</item>

    </string-array>
    <string-array name="arr_drinking_2">
        <item>Yes</item>
        <item>No</item>
        <item>Drinks Socially</item>

    </string-array>
    <string-array name="arr_drinking_3">
        <item>Yes</item>
        <item>No</item>
        <item>Drinks Socially</item>
        <item>Doesn\'t Matter</item>
    </string-array>
    <string-array name="arr_star">
        <item>Any</item>
        <item>ANUSHAM</item>
        <item>ASWINI</item>
        <item>AVITTAM</item>
        <item>AYILYAM</item>
        <item>BHARANI</item>
        <item>CHITHIRAI</item>
        <item>HASTHAM</item>
        <item>KETTAI</item>
        <item>KRITHIGAI</item>
        <item>MAHAM</item>
        <item>MOOLAM</item>
        <item>MRIGASIRISHAM</item>
        <item>POOSAM</item>
        <item>PUNARPUSAM</item>
        <item>PURADAM</item>
        <item>PURAM</item>
        <item>PURATATHI</item>
        <item>REVATHI</item>
        <item>ROHINI</item>
        <item>SADAYAM</item>
        <item>SWATHI</item>
        <item>THIRUVADIRAI</item>
        <item>THIRUVONAM</item>
        <item>UTHRADAM</item>
        <item>UTHRAM</item>
        <item>UTHRATADHI</item>
        <item>VISAKAM</item>
    </string-array>
</resources>