<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/fivezero"
        android:background="@drawable/banner1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:src="@drawable/logo1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/onezero"
                android:gravity="center"
                android:text="@string/Indias_most_trusted_matrimony_app"
                android:textColor="@color/colorDarkGrayH"
                android:textSize="@dimen/oneeight"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fivezero"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2.0">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_green_rectengle"
            android:text="@string/Login"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/onetwo" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_darkgray_rectengle"
            android:drawableRight="@drawable/icon_arrow_right"
            android:paddingRight="@dimen/five"
            android:text="@string/Sign_Up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/onetwo" />
    </LinearLayout>
</RelativeLayout>