<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
       android:id="@+id/header"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
        <include
           android:layout_width="fill_parent"
           android:layout_height="@dimen/fivezero"
           android:visibility="visible"
           layout="@layout/header1" />

   </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:layout_margin="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twozero"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password1"
                android:layout_marginTop="@dimen/twozero"
                android:textSize="@dimen/onefour"
                android:textColor="@color/colorBlack" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/onezero"
                android:theme="@style/EditTextviewStyle">

                <EditText
                    android:id="@+id/edtEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Email_Id_Or_Username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/onetwo"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_orange_rounded_rectengle"
                android:layout_gravity="center_horizontal"
                android:text="@string/Submit"
                android:textAllCaps="false"
                android:paddingLeft="@dimen/twofive"
                android:paddingRight="@dimen/twofive"
                android:paddingTop="@dimen/five"
                android:paddingBottom="@dimen/five"
                android:textSize="@dimen/onetwo"
                android:elevation="10dp"
                android:layout_marginTop="@dimen/twozero"
                android:textColor="@color/colorWhite" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
