<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/header1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/fivezero"
            android:visibility="visible" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/onezero"
                android:gravity="center"
                android:fontFamily="@font/poppinsregular"
                android:text="MOBILE VERIFICATION"
                android:textColor="@color/offBlack"
                android:textSize="@dimen/_24sdp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus5sdp"
                android:gravity="center"
                android:text="Verify your mobile on by entering OTP"
                android:fontFamily="@font/poppinsregular"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMobileNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="-"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/onefour" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular"
                android:background="@drawable/bg_green_rectengle"
                android:text="@string/edit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="ENTER OTP"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />



        <com.goodiebag.pinview.Pinview
            android:id="@+id/edtOTP"
            app:pinBackground="@drawable/pinview_shape"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="@dimen/_40sdp"
            app:pinWidth="40dp"
            app:pinHeight="40dp"
            app:pinLength="4"
            app:cursorVisible="false"
            app:inputType="number"
            app:password="false"/>


    </LinearLayout>



        <Button
            android:id="@+id/btnVerifyContinue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_orange_rounded_rectengle"
            android:elevation="@dimen/_10sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/twofive"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/Verify_continue"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="NOT RECEIVED OTP YET?"
                android:textColor="#303030"
                android:textSize="@dimen/_12sdp" />
            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30 sec"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="@dimen/nine"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <Button
            android:id="@+id/txtSendOTPAgain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundbtn_resend_otp"
            android:elevation="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_25sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="RESEND OTP"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@color/lightblack"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relEditMobileNoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_transperant"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linSlidingDrawer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/onesixzero"
            android:layout_alignParentBottom="true"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/twofive"
                android:layout_marginTop="@dimen/oneeight"
                android:text="@string/edit_mobile_no"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/oneeight" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twofive"
                android:layout_marginTop="@dimen/onefive"
                android:layout_marginRight="@dimen/twofive"
                android:theme="@style/EditTextviewStyle">

                <EditText
                    android:id="@+id/edtEdtMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_mobile_no"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/onezero"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="@dimen/onezero"
                    android:background="@drawable/bg_orange_rounded_corner"
                    android:text="SAVE"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10sdp" />

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/onezero"
                    android:background="@drawable/bg_orange_rounded_corner"
                    android:text="CLOSE"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
